boreal/tests/assets/invalid_files/parsing/regex_range_invalid.yar
// [error: invalid regex range, start must be <= to end]
rule a {
    strings:
        $a = /a{5,4}/
    condition:
        $a
}
